--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           go-version: ${{ matrix.go }}
 
-      - name: Run build
+      - name: Run build and prepare target files
         run: |
           go version
           CGO_ENABLED=0 go build -trimpath -o bin/rosenTss-${{ matrix.platform }}-${{ github.ref_name }}
@@ -43,10 +43,8 @@ jobs:
           mv conf.env.sample conf/conf.env
 
       - name: Prepare Release File
-        uses: vimtor/action-zip@v1
-        with:
-          files: conf/ ./bin/rosenTss-${{ matrix.platform }}-${{ github.ref_name }}
-          dest: rosenTss-${{ matrix.platform }}-${{ github.ref_name }}.zip
+        run: |
+          7z a rosenTss-${{ matrix.platform }}-${{ github.ref_name }}.zip ./bin/rosenTss-${{ matrix.platform }}-${{ github.ref_name }} ./conf
 
       - name: Upload Release File
         uses: softprops/action-gh-release@v1
