--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,29 @@ mocks/vendor
 # Go workspace file
 go.work
 
-bin/*
+**/bin
 
+node_modules
+.nyc_output
+coverage
+dir
+build
+dist
+logs/
+out
+.env
+yarn.lock
+
+# TypeScript cache
+*.tsbuildinfo
+
+### Database ###
+*.accdb
+*.db
+*.dbf
+*.mdb
+*.pdb
+*.sqlite3
+*.db-shm
+*.db-wal
+*.sqlite
