--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
     "allowJs": false,
+    "declaration": true,
+    "declarationMap": true,
     "esModuleInterop": true,
     "inlineSourceMap": true,
+    "inlineSources": true,
     "isolatedModules": false,
     "module": "esnext",
     "moduleResolution": "node",
