migrate from jest to vitest on tss pacakge

--- a/packages/tss/tsconfig.json
+++ b/packages/tss/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "outDir": "./dist"
   },
-  "include": ["tests", "lib"]
+  "include": ["tests", "lib", "vitest.config.ts"]
 }
