fix package name

--- a/packages/ergo-multi-sig/package.json
+++ b/packages/ergo-multi-sig/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ergo-multi-sig",
+  "name": "@rosen-bridge/ergo-multi-sig",
   "version": "0.0.0",
   "description": "multi signature protocol for ergo network",
   "repository": "https://github.com/rosen-bridge/sign-protocols",
