--- a/.github/workflows/keygen-service-docker-release.yml
+++ b/.github/workflows/keygen-service-docker-release.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image for Keygen Service
 on:
   push:
     branches:
-      - dev
+      - 20-move-keygen-service
     tags:
       - keygen-service-*
 
@@ -22,10 +22,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Download Release From tss-api
+      - name: Download Release From sign-protocols
         uses: dsaltares/fetch-gh-release-asset@1.1.1
         with:
-          repo: 'rosen-bridge/tss-api'
+          repo: 'zargarzadehm/sign-protocols'
           version: 'latest'
           regex: true
           file: 'rosenTss-linux-*'
@@ -50,14 +50,14 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: rosen-bridge
+          username: zargarzadehm
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker Metadata action
         uses: docker/metadata-action@v5
         id: meta
         with:
-          images: ghcr.io/rosen-bridge/keygen-service
+          images: ghcr.io/zargarzadehm/keygen-service
           tags: |
             type=ref,event=branch
             type=match,pattern=\d.\d.\d
