--- a/.github/workflows/keygen-service-docker-release.yml
+++ b/.github/workflows/keygen-service-docker-release.yml
@@ -30,10 +30,19 @@ jobs:
           version: 'latest'
           regex: true
           file: 'rosenTss-linux-*'
-          target: './services/keygen-servic/bin/'
+          target: './bin/'
 
       - name: Move the Files
         run: |
+          echo "*********************************************"
+          pwd
+          echo "*********************************************"
+          ls -la .
+          echo "*********************************************"
+          ls -la ../
+          echo "*********************************************"
+          ls -la ../../
+          echo "*********************************************"
           mv ./docker/production.yaml ./config/
           mv ./docker/custom-environment-variables.yaml ./config/
           7z x ./bin/rosenTss-linux-* -obin/ && rm -rf ./bin/*.zip
