--- a/services/keygen-service/Dockerfile
+++ b/services/keygen-service/Dockerfile
@@ -11,9 +11,9 @@ USER ergo
 
 WORKDIR /app
 COPY --chmod=700 --chown=ergo:ergo package*.json ./
-ADD --chmod=700 --chown=ergo:ergo ./patches/ ./patches/
+ADD --chmod=700 --chown=ergo:ergo ./services/keygen-service/patches/ ./patches/
 RUN npm ci
-COPY --chmod=700 --chown=ergo:ergo . .
+COPY --chmod=700 --chown=ergo:ergo ./services/keygen-service .
 RUN npm run build
 
 ENV NODE_ENV=production
