--- a/.github/workflows/keygen-service-docker-release.yml
+++ b/.github/workflows/keygen-service-docker-release.yml
@@ -23,10 +23,10 @@ jobs:
           fetch-depth: 0
 
       - name: Download Release From sign-protocols
-        uses: dsaltares/fetch-gh-release-asset@1.1.2
+        uses: dsaltares/fetch-gh-release-asset@1.1.1
         with:
           repo: 'zargarzadehm/sign-protocols'
-          version: 'tags/tss-api-*'
+          version: 'latest'
           regex: true
           file: 'rosenTss-linux-*'
           target: './services/keygen-service/bin/'
