--- a/.github/workflows/keygen-service-docker-release.yml
+++ b/.github/workflows/keygen-service-docker-release.yml
@@ -22,17 +22,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Download Release From sign-protocols
-        uses: dsaltares/fetch-gh-release-asset@1.1.1
-        with:
-          repo: 'zargarzadehm/sign-protocols'
-          version: 'latest'
-          regex: true
-          file: 'rosenTss-linux-*'
-          target: './services/keygen-service/bin/'
-
       - name: Move the Files
         run: |
+          npx @zargarzadehm/cli@${{ vars.ROSEN_CLI_VERSION || 'latest' }} download-tss -n linux -r -t tss-api -o ./bin/
           mv ./docker/production.yaml ./config/
           mv ./docker/custom-environment-variables.yaml ./config/
           7z x ./bin/rosenTss-linux-* -obin/ && rm -rf ./bin/*.zip
